--- a/style.css
+++ b/style.css
@@ -105,3 +105,15 @@ span{
 .home-img {
   border-radius: 50%;
 }
+.home-img img{
+  position: relative;
+  top: 3rem;
+  width: 32vw;
+  border-radius:50% ;
+  box-shadow: 0 0 25px var(--main-color);
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+}
+.home-img img: hover{
+  box-shadow:
+}
