--- a/style.css
+++ b/style.css
@@ -114,6 +114,250 @@ span{
   cursor: pointer;
   transition: 0.4s ease-in-out;
 }
-.home-img img: hover{
-  box-shadow:blue;
+.home-img img:hover{
+  box-shadow: 0 0 25px var(--main-color),
+              0 0  50px var(--main-color),
+              0 0 100px var(--main-color);
+}
+.home-content p{
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.8;
+  max-width:1000px;
+}           
+.social-icon a{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4.5rem;
+  height: 4.5rem;
+  background: transparent;
+  border: 2px solid var(--main-color);
+  font-size: 2.5rem;
+  border-radius: 50%;
+  color: var(--main-color);
+  margin: 3rem 1.5rem 3rem 0;
+  transition: 0.3s ease-in-out;
+}
+.social-icon a:hover{
+  color: var(--text-color);
+  transform: scale(1.3)translateY(-5px);
+  background-color: var(--main-color);
+  box-shadow: 0 0 25px var(--main-color);
+  
+}
+.btn{
+  display: inline-block ;
+  padding: 1rem 2.8rem;
+  background: var(--main-color);
+  box-shadow: 0 0 25px var(--main-color);
+  border-radius: 4rem;
+  font-size: 1.6rem;
+  color: black;
+  border: 2px solid transparent;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+.btn:hover{
+  transform: flex;
+  box-shadow: 0 0 50px var(--main-color);
+}
+.btn-group{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.btn-group a:nth-of-type(2){
+  background-color: black;
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
+  box-shadow: 0 0 25px transparent;
+ }
+ .btn-group a:nth-of-type(2):hover{
+  box-shadow: 0 0 25px var(--main-color);
+  background-color: var(--main-color);
+  color: black;
+ }
+ .text-animation{
+  font-size: 34px;
+  font-weight: 600;
+  min-width: 280px;
+ }
+ .text-animation span{
+  position: relative;
+ }
+ .text-animation span::before{
+  content: "Web Developer";
+  color: var(--main-color);
+  animation: words 20s infinite;
+ }
+ .text-animation span::after{
+  content: "";
+  background-color: var(--background-color);
+  position: absolute;
+  width: calc(100% + 8px);
+  height: 100%;
+  border-left: 3px solid var(--background-color);
+  right: -8px;
+  animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
+ }
+ @keyframes cursor{
+  to{
+    border-left: 1px solid var(--main-color);
+    
+  }
+ }
+ @keyframes words{
+  0%,
+  20%
+  {
+    content: "Frontend Developer"
+  }
+  21%,
+  40%
+    {content: "Web Designer";
+    }
+  41%,
+  60%
+  {
+    content: "web developer";
+  }
+  61%,
+  80%
+  {
+    content: "software tester";
+  }
+  81%,
+  100%
+  {
+    content: "UI/UX designer";
+  }
+}
+@keyframes typing{
+  10%,
+  15%,
+  30%,
+  35%,
+  50%,
+  55%,
+  70%,
+  75%,
+  90%,
+  95%{
+    width: 0;
+  }
+
+  5%,
+  20%,
+  25%, 
+  40%,
+  45%,
+  60%,
+  65%,
+  80%,
+  85%{
+width: calc(100% + 8px);
+  }
+}
+.heading{
+  font-size: 8rem;
+  text-align: center;
+  margin: 5rem 0;
+}
+  .education{
+  padding: 100px 15px;
+  background: var(--second-background-color);
+}
+.education h2{
+  margin-bottom: 5rem;
+
+}
+.timeline-item{
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+}
+.timeline-item ::before{
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 100px;
+  background-color: var(--main-color);
+  left: calc(50% - 1px);
+}
+.timeline-item{
+  margin-bottom: 40px;
+  width: 100%;
+  position: relative;
+}
+.timeline-item:last-child{
+  margin-bottom: 0;
+}
+.timeline-item:nth-child(odd){
+  padding-right: calc(50% + 30px);
+  text-align: right;
+  
+}
+.timeline-item:nth-child(even){
+  padding-left: calc(50% +30px);
+
+}
+.timeline-dot 
+{
+  height: 21px;
+  width: 21px;
+  background-color: var(--main-color);
+  box-shadow: 0 0 25px var(--main-color),
+              0 0 30px var(--main-color);
+  position: absolute;
+  left: calc(50% - 8px);
+  border-radius: 50%;
+  top: 10px;
+}
+.timeline-date{
+  font-size: 20px;
+  font-weight: 800;
+  color: white;
+  margin: 6px 0 15px;
+
+}
+.timeline-content{
+  background-color: var(--main-color);
+  border: 3px solid var(--main-color);
+  padding: 30px 50 px;
+  border-radius: 4rem;
+  box-shadow: 00 10px var(--main-color);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+.timeline-content:hover{
+  transform: scale(1.05);
+  box-shadow: 0 0 25px var(--main-color);
+}
+.timeline-content h3{
+  font-size: 20px;
+  color: white;
+  margin: 0 0 10px ;
+  font-weight: 500;
+}
+.timeline-content p{
+color: white;
+font-size:16px ;
+font-weight: 300;
+line-height: 22px;
+}
+::-webkit-scrollbar{
+  width: 15px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--main-color);
+
+}
+::-webkit-scrollbar-track{
+  background-color: var(--main-color);
+  width: 50px;
 }
