--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ span{
 .home-img img{
   position: relative;
   top: 3rem;
-  width: 32vw;
+  width: 22vw;
   border-radius:50% ;
   box-shadow: 0 0 25px var(--main-color);
   cursor: pointer;
@@ -264,7 +264,7 @@ width: calc(100% + 8px);
   text-align: center;
   margin: 5rem 0;
 }
-  .education{
+.education{
   padding: 100px 15px;
   background: var(--second-background-color);
 }
@@ -282,7 +282,7 @@ width: calc(100% + 8px);
   content: "";
   position: absolute;
   width: 5px;
-  height: 100px;
+  height: 100%;
   background-color: var(--main-color);
   left: calc(50% - 1px);
 }
@@ -299,10 +299,9 @@ width: calc(100% + 8px);
   text-align: right;
  }
 .timeline-item:nth-child(even){
-  padding-left: calc(50% +30px);
+  padding-left: calc(50% + 30px);
 }
-.timeline-dot 
-{
+.timeline-dot{
   height: 21px;
   width: 21px;
   background-color: var(--main-color);
@@ -351,6 +350,6 @@ line-height: 22px;
   background-color: var(--main-color);
 }
 ::-webkit-scrollbar-track{
-  background-color: var(--main-color);
+  background-color: var(--background-color);
   width: 50px;
 }
