--- a/style.css
+++ b/style.css
@@ -220,12 +220,12 @@ span{
   41%,
   60%
   {
-    content: "web developer";
+    content: "Web Developer";
   }
   61%,
   80%
   {
-    content: "software tester";
+    content: "Software Tester";
   }
   81%,
   100%
@@ -348,9 +348,132 @@ line-height: 22px;
 }
 ::-webkit-scrollbar-thumb{
   background-color: var(--main-color);
-  /* border-radius: 10px; */
+  
 }
 ::-webkit-scrollbar-track{
   background-color: var(--background-color);
   width: 50px;
+}
+.services{
+  background: var(--background-color);
+  color: black;
+}
+.services h2{
+  margin-bottom: 5rem;
+  color: white;
+}
+.services-container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+  gap: 2.5rem;
+}
+.service-box{
+  background-color: var(--main-color);
+  height: 300px;
+  border-radius: 3rem;
+  border: 5px solid transparent;
+  cursor: pointer;
+  transition: 0.4s ease-in-out; 
+}
+ .service-box:hover{
+  background:white;
+  color: black;
+  border: 5px solid var(--main-color);
+  transform: scale(1.03);
+}
+.service-box .service-info{
+  display:flex ;
+  flex-direction: column;
+  text-align: left;
+  max-height: 200px;
+  justify-content: left;
+  align-items: baseline;
+  padding: 5rem 5rem;
+}
+.service-info h4{
+  font-size: 3rem;
+  font-weight: 800;
+  line-height: 2;
+}
+.service-info p{
+  font-size: 1.6rem;
+  font-weight: 600;
+  max-height: 100px;
+  line-height: 1.7;
+  margin: auto;
+}
+.contact{
+  background-color: var(--background-color);
+}
+.contact h2{
+  margin-bottom: 3rem;
+  color: white;
+}
+.contact form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  margin: 5rem auto;
+  text-align: center;
+}
+.contact form .input-box{
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+}
+.content form .input-box input,
+.contact form textarea{
+  width: 100%;
+  padding: 2.5rem;
+  font-size: 1.8rem ;
+  color: var(--text-color);
+  background: var(--background-color);
+  border-radius: 2rem;
+  border: 2px solid var(--main-color);
+  margin: 1.5rem 0;
+  resize: none;
+}
+.contact form .btn{
+  margin-top: 2rem;
+}
+.footer{
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  padding: 40px 0;
+  background-color: var(--second-background-color);
+}
+.footer .social{
+  text-align: center ;
+  padding-bottom: 25px;
+  columns: var(--main-color);
+}
+.footer .social a{
+  font-size: 25px;
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 10px ;
+  transition: 0.3s ease-in-out;
+}
+.footer .social a:hover{
+  transform: scale(1.2) translateY(-10px);
+  background-color: var(--main-color);
+  color: black;
+  box-shadow: 0 0 25px var(--main-color);
+}
+.footer ul{
+  margin-top:0 ;
+  padding: 0;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
 }
