--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ line-height: 22px;
    justify-content: center;
    flex-wrap: wrap;
 }
-.content form .input-box input,
+.contact form .input-box input,
 .contact form textarea{
   width: 100%;
   padding: 2.5rem;
@@ -476,4 +476,22 @@ line-height: 22px;
   line-height: 1.6;
   margin-bottom: 0;
   text-align: center;
+}
+.footer ul li a{
+  color: white;
+  border-bottom: 3px solid transparent;
+  transition: 0.3 ease-in-out;
+}
+.footer ul li a:hover{
+  border-bottom: 3px solid var(--main-color);
+}
+.footer ul li{
+  display: inline-block;
+  padding: 0 15px;
+}
+.footer .copyright{
+  margin-top: 50px;
+  text-align: center;
+  font-size: 16px;
+  color: white;
 }
